# corerun

./: Cargo.toml  LICENSE  README.md  build_with_entitlements.sh
src/: core_file_parser.rs  lib.rs  mach2_thread_status.rs  main.rs  memory_manager.rs  process_control.rs
tests/: integration_test.rs
