[package]
name = "corerun"
version = "0.1.0"
edition = "2024"
description = "A Rust command line application for core operations"
license = "MIT"
authors = ["Jameson Nash <vtjnash@gmail.com>"]
homepage = "https://github.com/example/corerun"
repository = "https://github.com/example/corerun"
readme = "README.md"
keywords = ["cli", "command-line", "tool"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
object = "0.36"
mach2 = "0.4"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
libc = "0.2"
command-fds = "0.2"
memmap2 = "0.9"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
libc = "0.2"

# Profile settings to disable unwinding and use abort on panic
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "empty_process"
path = "src/bin/empty_process.rs"
